[package]
name = "franka_rust"
version = "0.1.11"
edition = "2024"
authors = ["Yixing <yanjizhou312@163.com>"]
readme = "README.md"
repository = "https://github.com/Robot-Exp-Platform/franka-rust"
license = "Apache-2.0"
description = "Rust bindings for the Franka Emika Panda robot"
categories = ["science::robotics"]
keywords = ["franka", "emika", "panda", "libfranka"]

[lib]
name = "franka_rust"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
roplat = { version = "0.1.0", path = "../roplat" }
robot_behavior = { version = "0.5.2", path = "../robot_behavior" }
pyo3 = { version = "0.27.1", optional = true, features = [
    "extension-module",
    "multiple-pymethods",
] }
cxx = { version = "1.0", optional = true }
nalgebra = { version = "0.34", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
serde_json = "1.0.143"
serde-big-array = "0.5.1"
bitflags = "2.9"
num-traits = "0.2"
num-derive = "0.4"
thiserror = "2.0"
bincode = { version = "1.3" }
crossbeam-channel = "0.5"
crossbeam = "0.8"
thread-priority = "1.2"
libloading = "0.8"
libc = "0.2"
strum = "0.27"
strum_macros = "0.27"
futures = "0.3.31"
tokio = { version = "1.48.0", features = ["time"] }

[build-dependencies]
cxx-build = "1.0"


[target.'cfg(target_os = "windows")'.dependencies]
sys-locale = "0.3"

[features]
default = []
debug = []
ffi = []
conservative_constraint = []
to_py = ["pyo3", "ffi", "robot_behavior/to_py"]
to_cxx = ["cxx", "ffi", "robot_behavior/to_cxx"]
