[package]
name = "franka_rust"
version = "0.2.0"
edition = "2024"
authors = ["Yixing <yanjizhou312@163.com>"]
readme = "README.md"
repository = "https://github.com/Robot-Exp-Platform/franka-rust"
license = "Apache-2.0"
description = "Rust bindings for the Franka Emika Panda robot"
categories = ["science::robotics"]
keywords = ["franka", "emika", "panda", "libfranka"]

[lib]
name = "franka_rust"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
roplat = "0.2.2"
robot_behavior = "0.6.0"
pyo3 = { version = "0.28.3", optional = true, features = [
    "extension-module",
    "multiple-pymethods",
] }
cxx = { version = "1.0", optional = true }
nalgebra = { version = "0.34", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
serde_json = "1.0.143"
serde-big-array = "0.5.1"
bitflags = "2.9"
num-traits = "0.2"
num-derive = "0.4"
thiserror = "2.0"
bincode = { version = "1.3" }
crossbeam-channel = "0.5"
crossbeam = "0.8"
libloading = "0.8"
libc = "0.2"
strum = "0.27"
strum_macros = "0.27"
tokio = { version = "1.48.0", features = ["net", "rt", "time"] }
anyhow = "1.0.100"

[build-dependencies]
cxx-build = "1.0"


[features]
default = []
debug = []
ffi = []
conservative_constraint = []
# Select the FCI protocol version and the matching `Move::Status` layout.
# Off (default): protocol version 5 (libfranka 0.9.2), 10-variant `MoveStatus`.
# On (`fci_v8`): protocol version 8 (libfranka 0.14.0), which inserts two
# safety-function variants at indices 3-4, giving a 12-variant `MoveStatus`.
fci_v8 = []
to_py = ["pyo3", "ffi", "robot_behavior/to_py"]
to_cxx = ["cxx", "ffi", "robot_behavior/to_cxx"]
